--- a/package.json
+++ b/package.json
@@ -7,30 +7,36 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@ap.cx/react-fullpage": "^0.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fullpage/react-fullpage": "^0.1.42",
     "@mui/material": "^5.16.0",
     "@tanstack/react-router": "^1.43.14",
     "aos": "^2.3.4",
+    "dedent": "^1.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "ts-pattern": "^5.2.0"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.43.13",
     "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "patch-package": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
