--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-syntax-highlighter": "^15.5.0",
+    "swiper": "^11.1.5",
     "ts-pattern": "^5.2.0"
   },
   "devDependencies": {
